ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
 name: notes-app-ingress
 namespace: notes-app-ns
 annotations: 
   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
 rules:
 - http:
     paths:
     - pathType: Prefix
       path: /
       backend:
         service:
           name: notes-app-service
           port:
             number: 8000
     - pathType: Prefix
       path: /nginx
       backend:
         service:
           name: nginx-service
           port:
             number: 80
